@@ -6,19 +6,35 @@ import java.lang.reflect.InvocationTargetException;
 import br.com.alura.alurator.playground.controle.SubControle;
 
 public class TesteInstanciaObjetoCorretamente {
-	public static void main(String[] args) throws ClassNotFoundException, NoSuchMethodException, SecurityException,
-			InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+
+	public static void main(String[] args) throws ClassNotFoundException, NoSuchMethodException, SecurityException, InstantiationException, IllegalAccessException, IllegalArgumentException {
+		
 		Class<SubControle> subControleClasse1 = SubControle.class;
-
-		Class<?> subControleClasse2 = Class.forName("br.com.alura.alurator.playground.controle.SubControle");
-		Class<?> controleClasse1 = Class.forName("br.com.alura.alurator.playground.controle.Controle");
-
-		Constructor<SubControle> construtorSubControle = subControleClasse1.getDeclaredConstructor();
-		System.out.println(construtorSubControle);
-
-		construtorSubControle.setAccessible(true);
-
-		SubControle instancia = construtorSubControle.newInstance();
-		System.out.println(instancia);
+		
+		Class<?> subControleClasse2 =
+				Class.forName("br.com.alura.alurator.playground.controle.SubControle");
+		
+		Class<?> controleClasse1 =
+				Class.forName("br.com.alura.alurator.playground.controle.Controle");
+		
+		try {
+			controleClasse1.getDeclaredConstructor().newInstance();
+		} catch (InvocationTargetException e) {
+			e.printStackTrace();
+			System.out.println(e.getTargetException());
+		}
+		
+//		controleClasse1.newInstance();
+		
+//		Constructor<SubControle> construtorSubControle = 
+//				subControleClasse1.getDeclaredConstructor();
+//		
+//		System.out.println(construtorSubControle);
+//		
+//		construtorSubControle.setAccessible(true);
+//		Object subControle = construtorSubControle.newInstance();
+//		
+//		System.out.println(subControle);
 	}
+
 }
